# bme280-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
example/: Cargo.toml
example/src/: main.rs
examples/: basic.rs  rtic.rs
src/: i2c.rs  lib.rs  spi.rs
