[package]
name = "bme280"
version = "0.4.4"
authors = ["Sean Bruton <sean@uberfoo.net>"]
description = "A rust device driver for the Bosch BME280 temperature, humidity, and atmospheric pressure sensor and the Bosch BMP280 temperature, and atmospheric pressure sensor"
repository = "https://github.com/VersBinarii/bme280-rs"
license = "MIT OR Apache-2.0"
keywords = ["bme280", "bmp280", "temperature", "pressure", "humidity"]
categories = ["embedded", "no-std", "hardware-support", "embedded-hal"]
edition = "2018"

[lib]
name = "bme280"

[dependencies]
embedded-hal = "=1.0.0-alpha.8"
serde = { version = "1.0", optional = true, features = ["derive"] }
defmt = { version = "0.3.2", optional = true }
derive_more = { version = "0.99.17", optional = true}

[dev-dependencies]
cortex-m-rtic = "1.0.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt-rtt = "0.3.0"
panic-semihosting = "0.6"

[dev-dependencies.stm32f4xx-hal]
version = "0.12.0"
features = ["stm32f411"]

[features]
with_defmt = ["defmt"]
with_std = ["derive_more"]

[[example]]
name = "rtic"
